--- a/modulo-01/class-id.html
+++ b/modulo-01/class-id.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/class-id.css">
 </head>
 <body>
-  <p class="texto-principal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti doloribus iusto, ipsum sit earum officiis inventore id illum nulla, tempora tenetur, tempore ipsa cupiditate accusantium. Delectus aperiam omnis laborum vero!</p>
+  <p class="texto-principal" id="texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti doloribus iusto, ipsum sit earum officiis inventore id illum nulla, tempora tenetur, tempore ipsa cupiditate accusantium. Delectus aperiam omnis laborum vero!</p>
 
-  <p class="texto-secundario">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quis neque porro repellat dignissimos vel quia ullam labore doloremque id laudantium minima facere earum, voluptate non delectus magnam iure veritatis.</p>
+  <p class="texto-principal " id="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quis neque porro repellat dignissimos vel quia ullam labore doloremque id laudantium minima facere earum, voluptate non delectus magnam iure veritatis.</p>
 </body>
 </html>
